[tool.poetry]
name = "fyne"
version = "0.6.4"
description = "Option pricing with affine models"
authors = ["Doug V <dougmvieira@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [
    { include = "fyne", from = "src" },
]

[tool.poetry.dependencies]
python = "^3.9"
numpy = "^1.26.2"
numba = "^0.58.1"
scipy = "^1.11.4"

[tool.poetry.group.dev.dependencies]
isort = "^5.13.2"
pytest = "^7.4.3"
black = "^24.3.0"
flake8 = "^6.1.0"
pytest-benchmark = "^4.0.0"

[tool.poetry.group.docs.dependencies]
mkdocs = "^1.5.3"
mkdocstrings = { version = "^0.24.0", extras = ["python"] }
bokeh = "^3.3.2"
plotly = "^5.18.0"
pandas = "^2.1.4"
mkdocs-material = "^9.5.3"

[tool.black]
line-length = 79

[tool.isort]
profile = "black"
line_length = 79

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
